Fix z-index on tooltips in panel

--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -46,6 +46,7 @@
 
         &-label {
             position: absolute;
+            z-index: 9999;
             background: rgba($color: #000000, $alpha: .8);
 
             line-height: 25px;
